--- a/styles/global.css
+++ b/styles/global.css
@@ -22,14 +22,27 @@ header {
 
 main {
     padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
     position: sticky;
     bottom: 0;
     padding: 7px 20px;
-    font-size: .8em;
+    font-size: 0.8em;
     display: flex;
     justify-content: flex-end;
     background-color: var(--footer-background);
+}
+
+#inputs-container img {
+    margin: 10px;
+    width: 30%;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.hide {
+    display: none;
 }
